--- a/nexa_mobile_app/pubspec.yaml
+++ b/nexa_mobile_app/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   http: ^1.2.0
   video_player: ^2.8.2
   chewie: ^1.7.4
+  path_provider: ^2.1.1
+  file_selector: ^1.0.3
+  file_selector_windows: ^0.9.3
 
 dev_dependencies:
   flutter_test:
