--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,16 @@
 {
-  "buildCommand": "next build",
-  "devCommand": "next dev",
-  "installCommand": "npm install",
-  "framework": "nextjs",
-  "outputDirectory": ".next"
+  "rewrites": [
+    {
+      "source": "/api/py/:path*",
+      "destination": "https://nexa-backend-fastapi.onrender.com/api/:path*"
+    },
+    {
+      "source": "/api/py-docs",
+      "destination": "https://nexa-backend-fastapi.onrender.com/docs"
+    },
+    {
+      "source": "/openapi.json",
+      "destination": "https://nexa-backend-fastapi.onrender.com/openapi.json"
+    }
+  ]
 }
